objects/SuperTable__SuperTableCS__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>store supertable default display columns</description>
    <fields>
        <fullName>SuperTable__Field_Api_Name__c</fullName>
        <description>store the display filed name</description>
        <label>Field_Api_Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuperTable__Field_Order_Number__c</fullName>
        <label>Field Order Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SuperTable__Obj_Api_Name__c</fullName>
        <description>store the api name of object</description>
        <label>Obj_Api_Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SuperTableCS</label>
</CustomObject>